--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -12,7 +12,7 @@ DATABASE_NAME=lahoo
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DATABASE=0
-REDIS_KEY_PREFIX=Lahoo
+REDIS_KEY_PREFIX=Lahoo:
 
 FIREBASE_PROJECT_ID=lahosa-4bc43
 FIREBASE_CLIENT_EMAIL=firebase-adminsdk-dysu4@lahosa-4bc43.iam.gserviceaccount.com
